Bulk update, pushing local changes for proper tracking in github.